2010-03-26  Eric Seidel  <eric@webkit.org>

        Unreviewed test fix.
        My change conflicted with one of Adam's causing test-webkitpy to fail.

        Move commit_message_for_this_commit from scm to checkout
        https://bugs.webkit.org/show_bug.cgi?id=36629

        * Scripts/webkitpy/common/checkout/api_unittest.py:
         - modified_changelogs is now on Checkout instead of scm.

2010-03-26  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Refactor IRCBot controller logic to allow for commands
        https://bugs.webkit.org/show_bug.cgi?id=36676

        We need to move the controller logic into the tool package so it can
        know about commands.  The changes to queueengine could go in a
        different patch, but we're going to need it anyway.

        * Scripts/webkitpy/common/config/irc.py: Added.
        * Scripts/webkitpy/common/net/irc/ircbot.py:
        * Scripts/webkitpy/common/net/irc/ircproxy.py:
        * Scripts/webkitpy/tool/bot/queueengine.py:
        * Scripts/webkitpy/tool/bot/sheriffircbot.py: Added.
        * Scripts/webkitpy/tool/commands/sheriffbot.py:
        * Scripts/webkitpy/tool/main.py:
        * Scripts/webkitpy/tool/mocktool.py:

2010-03-26  Adam Barth  <abarth@webkit.org>

        Rubber stamped by Eric Seidel.

        Move the threading code into its own module.  (It has nothing to do with IRC.)

        * Scripts/webkitpy/common/net/irc/ircbot.py:
        * Scripts/webkitpy/common/net/irc/ircproxy.py:
        * Scripts/webkitpy/common/net/irc/messagepump.py: Removed.
        * Scripts/webkitpy/common/net/irc/messagepump_unittest.py: Removed.
        * Scripts/webkitpy/common/net/irc/threadedmessagequeue.py: Removed.
        * Scripts/webkitpy/common/net/irc/threadedmessagequeue_unittest.py: Removed.
        * Scripts/webkitpy/common/net/irc/unittests.py:
        * Scripts/webkitpy/common/thread: Added.
        * Scripts/webkitpy/common/thread/__init__.py: Added.